@@ -15,7 +15,7 @@
 #      along with this program; if not, write to the Free Software
 #      Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111, USA.
 #   
-# $Id: protocol.py,v 1.7 2002/02/14 06:02:11 smulloni Exp $
+# $Id: protocol.py,v 1.8 2002/02/14 06:13:14 smulloni Exp $
 # Time-stamp: <01/05/04 15:57:35 smulloni>
 ########################################################################
 
@@ -85,8 +85,9 @@ class HTTPConnection:
        
     def _convertArgs(self, query):
         d = {}
-        for k in query.keys():
-            d[k] = self._convertArg(query[k])
+        if query:
+            for k in query.keys():
+                d[k] = self._convertArg(query[k])
         return d
 
     def _convertArg(self, val):
@@ -371,6 +372,9 @@ def _cleanupConfig(requestData, sessionDict):
 
 ########################################################################
 # $Log: protocol.py,v $
+# Revision 1.8  2002/02/14 06:13:14  smulloni
+# slight tweak -- don't apply converters to default values in extract_args
+#
 # Revision 1.7  2002/02/14 06:02:11  smulloni
 # added extract_args method to CONNECTION object.
 #
